--- a/public/themes/feed_admin/admin/link/index.html
+++ b/public/themes/feed_admin/admin/link/index.html
@@ -1,92 +1,135 @@
 <include file="public@header"/>
 </head>
 <body>
-<div class="wrap js-check-wrap">
-    <ul class="nav nav-tabs">
-        <li class="active"><a href="{:url('link/index')}">所有友情链接</a></li>
-        <li><a href="{:url('link/add')}">添加友情链接</a></li>
-    </ul>
-    <form method="post" class="js-ajax-form margin-top-20" action="{:url('Link/listOrder')}">
-        <div class="table-actions">
-            <button class="btn btn-sm btn-primary js-ajax-submit" type="submit">{:lang('SORT')}</button>
-            <button class="btn btn-sm btn-success js-ajax-submit" type="submit"
-                    data-action="{:url('link/toggle',array('display'=>1))}" data-subcheck="true">{:lang('DISPLAY')}
-            </button>
-            <button class="btn btn-sm btn-danger js-ajax-submit" type="submit"
-                    data-action="{:url('link/toggle',array('hide'=>1))}" data-subcheck="true">{:lang('HIDE')}
-            </button>
+<div class="layui-fluid wrap js-check-wrap">
+    <div class="layui-row">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-header">友情链接</div>
+                <div class="layui-card-body">
+                    <div class="layui-tab">
+                        <ul class="layui-tab-title">
+                            <li class="layui-this"><a href="{:url('link/index')}">所有友情链接</a></li>
+                            <li><a href="{:url('link/add')}">添加友情链接</a></li>
+                        </ul>
+                        <div class="layui-tab-content">
+                            <form method="post" class="js-ajax-form layui-form" action="{:url('Link/listOrder')}">
+                                <div class="layui-btn-group">
+                                    <button class="layui-btn  layui-btn-xs js-ajax-submit" type="submit">
+                                        {:lang('SORT')}
+                                    </button>
+                                    <button class="layui-btn layui-btn-xs layui-btn-normal js-ajax-submit" type="submit"
+                                            data-action="{:url('link/toggle',array('display'=>1))}"
+                                            data-subcheck="true">{:lang('DISPLAY')}
+                                    </button>
+                                    <button class="layui-btn layui-btn-xs layui-btn-danger js-ajax-submit" type="submit"
+                                            data-action="{:url('link/toggle',array('hide'=>1))}" data-subcheck="true">
+                                        {:lang('HIDE')}
+                                    </button>
+                                </div>
+                                <php>$status=array("1"=>lang('DISPLAY'),"0"=>lang('HIDDEN'));</php>
+                                <table class="layui-table">
+                                    <thead>
+                                    <tr>
+                                        <th width="16">
+                                            <input type="checkbox" lay-skin="primary" lay-filter="js-check-all" class="js-check-all">
+                                        </th>
+                                        <th width="50">{:lang('SORT')}</th>
+                                        <th width="50">ID</th>
+                                        <th>{:lang('NAME')}</th>
+                                        <th>链接地址</th>
+                                        <th width="50">{:lang('STATUS')}</th>
+                                        <th width="120">{:lang('ACTIONS')}</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <foreach name="links" item="vo">
+                                        <tr>
+                                            <td>
+                                                <input type="checkbox" lay-skin="primary" class="js-check" name="ids[]"
+                                                       value="{$vo.id}">
+                                            </td>
+                                            <td>
+                                                <input name='list_orders[{$vo.id}]' class="input input-order mr5"
+                                                       type='text' size='3' value='{$vo.list_order}'>
+                                            </td>
+                                            <td>{$vo.id}</td>
+                                            <td>{$vo.name}</td>
+                                            <td><a href="{$vo.url}" target="_blank">{$vo.url}</a></td>
+                                            <td>
+                                                <empty name="vo.status">
+                                                    <span class="label label-default">
+                                                        {$status[$vo['status']]}
+                                                    </span>
+                                                    <else/>
+                                                    <span class="label label-success">
+                                                        {$status[$vo['status']]}
+                                                    </span>
+                                                </empty>
+                                            </td>
+                                            <td>
+                                                <div class="layui-btn-group">
+                                                    <a class="layui-btn layui-btn-xs"
+                                                       href="{:url('link/edit',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                                                    <a class="layui-btn layui-btn-xs layui-btn-danger js-ajax-delete" href="{:url('link/delete',array('id'=>$vo['id']))}">
+                                                        {:lang('DELETE')}
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </foreach>
+                                    </tbody>
+                                    <tfoot>
+                                    <tr>
+                                        <th width="16">
+                                            <input type="checkbox" lay-skin="primary" lay-filter="js-check-all" class="js-check-all">
+                                        </th>
+                                        <th width="50">{:lang('SORT')}</th>
+                                        <th width="50">ID</th>
+                                        <th>{:lang('NAME')}</th>
+                                        <th>链接地址</th>
+                                        <th width="50">{:lang('STATUS')}</th>
+                                        <th width="120">{:lang('ACTIONS')}</th>
+                                    </tr>
+                                    </tfoot>
+                                </table>
+                                <div class="layui-btn-group">
+                                    <button class="layui-btn layui-btn-xs js-ajax-submit" type="submit">
+                                        {:lang('SORT')}
+                                    </button>
+                                    <button class="layui-btn layui-btn-xs layui-btn-normal js-ajax-submit" type="submit"
+                                            data-action="{:url('link/toggle',array('display'=>1))}"
+                                            data-subcheck="true">{:lang('DISPLAY')}
+                                    </button>
+                                    <button class="layui-btn layui-btn-xs layui-btn-danger js-ajax-submit" type="submit"
+                                            data-action="{:url('link/toggle',array('hide'=>1))}" data-subcheck="true">
+                                        {:lang('HIDE')}
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <php>$status=array("1"=>lang('DISPLAY'),"0"=>lang('HIDDEN'));</php>
-        <table class="table table-hover table-bordered table-list">
-            <thead>
-            <tr>
-                <th width="16"><label><input type="checkbox" class="js-check-all" data-direction="x"
-                                             data-checklist="js-check-x"></label></th>
-                <th width="50">{:lang('SORT')}</th>
-                <th width="50">ID</th>
-                <th>{:lang('NAME')}</th>
-                <th>链接地址</th>
-                <th width="50">{:lang('STATUS')}</th>
-                <th width="120">{:lang('ACTIONS')}</th>
-            </tr>
-            </thead>
-            <tbody>
-            <foreach name="links" item="vo">
-                <tr>
-                    <td><input type="checkbox" class="js-check" data-yid="js-check-y" data-xid="js-check-x" name="ids[]"
-                               value="{$vo.id}"></td>
-                    <td><input name='list_orders[{$vo.id}]' class="input input-order mr5" type='text' size='3'
-                               value='{$vo.list_order}'></td>
-                    <td>{$vo.id}</td>
-                    <td>{$vo.name}</td>
-                    <td><a href="{$vo.url}" target="_blank">{$vo.url}</a></td>
-                    <td>
-                        <empty name="vo.status">
-                            <span class="label label-default">
-                                {$status[$vo['status']]}
-                            </span>
-                            <else/>
-                            <span class="label label-success">
-                                {$status[$vo['status']]}
-                            </span>
-                        </empty>
-                    </td>
-                    <td>
-                        <a class="btn btn-xs btn-primary" href="{:url('link/edit',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
-                        <a class="btn btn-xs btn-danger" href="{:url('link/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">
-                            {:lang('DELETE')}
-                        </a>
-                    </td>
-                </tr>
-            </foreach>
-            </tbody>
-            <tfoot>
-            <tr>
-                <th width="16">
-                    <label>
-                        <input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x">
-                    </label>
-                </th>
-                <th width="50">{:lang('SORT')}</th>
-                <th width="50">ID</th>
-                <th>{:lang('NAME')}</th>
-                <th>链接地址</th>
-                <th width="50">{:lang('STATUS')}</th>
-                <th width="120">{:lang('ACTIONS')}</th>
-            </tr>
-            </tfoot>
-        </table>
-        <div class="table-actions">
-            <button class="btn btn-sm btn-primary js-ajax-submit" type="submit">{:lang('SORT')}</button>
-            <button class="btn btn-sm btn-success js-ajax-submit" type="submit"
-                    data-action="{:url('link/toggle',array('display'=>1))}" data-subcheck="true">{:lang('DISPLAY')}
-            </button>
-            <button class="btn btn-sm btn-danger js-ajax-submit" type="submit"
-                    data-action="{:url('link/toggle',array('hide'=>1))}" data-subcheck="true">{:lang('HIDE')}
-            </button>
-        </div>
-    </form>
+    </div>
 </div>
-<script src="__STATIC__/js/admin.js"></script>
+<script src="__STATIC__/okadmin/lib/layui/layui.js"></script>
+<script src="__TMPL__/public/all.js"></script>
+<script>
+    layui.use(['form'], function () {
+        var form = layui.form;
+
+        form.on('checkbox(js-check-all)', function (data) {
+            var _checked = data.elem.checked;
+            var flag = false;
+            if (_checked) flag = true;
+            $('input[type="checkbox"]').each(function (index, item) {
+                $(this).prop('checked', flag);
+            });
+            form.render('checkbox');
+        });
+    });
+</script>
 </body>
 </html>
