--- a/public/themes/feed_admin/admin/setting/clear_cache.html
+++ b/public/themes/feed_admin/admin/setting/clear_cache.html
@@ -1,4 +1,6 @@
 <include file="public@header"/>
+<link rel="stylesheet" href="__TMPL__/public/assets/simpleboot3/css/simplebootadmin.css">
+<link rel="stylesheet" href="__TMPL__/public/assets/themes/simpleadmin/bootstrap.min.css">
 </head>
 <body>
 <div class="wrap">
