--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -47,14 +47,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/cms/"><img src="__STATIC__/informanction/picture/logo.png" width="180" alt=""></a>
+                <a class="navbar-brand" href="/">
+                    <empty name="$site_info.site_logo">
+                        请在后台上传LOGO
+                    <else/>
+                        <img src="{:cmf_get_image_url($site_info.site_logo)}" width="180" alt="">
+                    </empty>
+                </a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <navigation nav-id="1" root="">
                         <navigationMenu root="li" class="dropdown">
-                            <a href="{$menu.href|default=''}" target="{$menu.target|default=''}">{$menu.name|default=''}</a>
+                            <a href="{$menu.href|default=''}"
+                               target="{$menu.target|default=''}">{$menu.name|default=''}</a>
                         </navigationMenu>
                         <navigationFolder root="li" dropdown="ul"
                                           dropdown-class="dropdown-menu" role="menu">
@@ -96,30 +103,32 @@
                     <div class="carousel-inner" role="listbox">
                         <empty name="slide_list">
                             <div class="text-center">—— 您还没有设置幻灯片，请去后台添加 ——</div>
-                        <else/>
+                            <else/>
                             <foreach name="slide_list" item="vo" key="key">
-                                <div class="item <if condition="$key eq 0"> active</if>">
-                                    <a href="/">
-                                        <div class="carousel-img" style="background-image:url('{:cmf_get_image_url($vo.image)}');">
+                                <div class="item <if condition=" $key eq 0
+                                "> active</if>">
+                                <a href="/">
+                                    <div class="carousel-img"
+                                         style="background-image:url('{:cmf_get_image_url($vo.image)}');">
 
-                                        </div>
-                                        <div class="carousel-caption hidden-xs">
-                                            <h3>{$vo.title}</h3>
-                                        </div>
-                                    </a>
-                                </div>
-                            </foreach>
-                        </empty>
+                                    </div>
+                                    <div class="carousel-caption hidden-xs">
+                                        <h3>{$vo.title}</h3>
+                                    </div>
+                                </a>
                     </div>
-                    <a class="left carousel-control" href="#index-focus" role="button" data-slide="prev">
-                        <span class="icon-prev fa fa-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#index-focus" role="button" data-slide="next">
-                        <span class="icon-next fa fa-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    </foreach>
+                    </empty>
                 </div>
+                <a class="left carousel-control" href="#index-focus" role="button" data-slide="prev">
+                    <span class="icon-prev fa fa-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#index-focus" role="button" data-slide="next">
+                    <span class="icon-next fa fa-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
             <!-- E 焦点图 -->
     </div>
 
@@ -167,7 +176,8 @@
                     <div class="col-sm-3 col-xs-6">
                         <a href="/cms/a/108.html" class="img-zoom">
                             <div class="embed-responsive embed-responsive-4by3">
-                                <img src="__STATIC__/informanction/picture/30752b442c826ab7d3a63f1ddfb5d9ac.png" alt="米家互联网洗烘一体机"
+                                <img src="__STATIC__/informanction/picture/30752b442c826ab7d3a63f1ddfb5d9ac.png"
+                                     alt="米家互联网洗烘一体机"
                                      class="embed-responsive-item">
                             </div>
                         </a>
@@ -253,11 +263,12 @@
                         <div class="text-center">
                             —— 暂无文章 ——
                         </div>
-                    <else/>
+                        <else/>
                         <portal:articles limit="5" order="post.published_time DESC">
                             <li>
                                 <span>[{$category_list[$vo['category_id']]}]</span>
-                                <a class="link-dark" href="{:cmf_url('portal/article/index', array('id' => $vo['id']))}" title="{$vo.post_title}">{$vo.post_title}</a>
+                                <a class="link-dark" href="{:cmf_url('portal/article/index', array('id' => $vo['id']))}"
+                                   title="{$vo.post_title}">{$vo.post_title}</a>
                             </li>
                         </portal:articles>
                     </empty>
@@ -288,14 +299,15 @@
                     <div class="text-center">
                         —— 暂无文章 ——
                     </div>
-                <else/>
+                    <else/>
                     <portal:articles limit="8" order="post.post_hits DESC">
                         <div class="media media-number">
                             <div class="media-left">
                                 <span class="num">{$key+1}</span>
                             </div>
                             <div class="media-body">
-                                <a class="link-dark" href="{:cmf_url('portal/article/index', array('id' => $vo.id))}" title="{$vo.post_title}">
+                                <a class="link-dark" href="{:cmf_url('portal/article/index', array('id' => $vo.id))}"
+                                   title="{$vo.post_title}">
                                     {$vo.post_title}
                                 </a>
                             </div>
