--- a/public/themes/feed_admin/admin/login.html
+++ b/public/themes/feed_admin/admin/login.html
@@ -1,70 +1,148 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>ThinkCMF</title>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge"/>
-    <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <meta name="robots" content="noindex,nofollow">
-    <!-- HTML5 shim for IE8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <![endif]-->
-    <link href="__TMPL__/public/assets/themes/{:cmf_get_admin_style()}/bootstrap.min.css" rel="stylesheet">
-    <link href="__STATIC__/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="__TMPL__/public/assets/themes/{:cmf_get_admin_style()}/login.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script>
-        if (window.parent !== window.self) {
-            document.write              = '';
-            window.parent.location.href = window.self.location.href;
-            setTimeout(function () {
-                document.body.innerHTML = '';
-            }, 0);
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="__STATIC__/okadmin/css/oksub.css">
+    <style>
+        .ad-login {
+            position: relative;
+            left: 0;
+            top: 0;
+            padding: 110px 0;
+            min-height: 100%;
+            box-sizing: border-box;
         }
-    </script>
+
+        .ad-user-login-main {
+            width: 375px;
+            margin: 0 auto;
+            box-sizing: border-box;
+        }
+
+        .ad-user-login-box {
+            padding: 20px;
+        }
+
+        .ad-user-login-header {
+            text-align: center;
+        }
+
+        .ad-user-login-header h2 {
+            margin-bottom: 10px;
+            font-weight: 300;
+            font-size: 30px;
+            color: #000;
+        }
+
+        .ad-user-login-header p {
+            font-weight: 300;
+            color: #ccc;
+        }
+
+        .ad-user-login-icon {
+            position: absolute;
+            left: 1px;
+            top: 1px;
+            width: 38px;
+            line-height: 36px;
+            text-align: center;
+            color: #d2d2d2;
+        }
+
+        .ad-user-login-body .layui-form-item {
+            position: relative;
+        }
+
+        .ad-user-login-body .layui-form-item .layui-input {
+            padding-left: 38px;
+        }
+
+        #ad-background {
+            background: url("__TMPL__/public/assets/images/background.jpg");
+        }
+
+        .ad-user-login-codeimg {
+            max-height: 38px;
+            width: 100%;
+            cursor: pointer;
+            box-sizing: border-box;
+        }
+
+        .layui-icon {
+            color: #1E9FFF;
+        }
+
+        .ad-user-main-box {
+            background-color: #fff;
+            padding: 20px;
+        }
+
+        .ad-user-jump-change {
+            float: right;
+        }
+
+        .ad-link {
+            color: #029789 !important;
+        }
+    </style>
+    <title>ADtalking登录页</title>
 </head>
-<body>
-<div class="wrap">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <h1 class="text-center">ThinkCMF</h1>
-                <form class="js-ajax-form" action="{:url('public/doLogin')}" method="post">
-                    <div class="form-group">
-                        <input type="text" id="input_username" class="form-control" name="username"
-                               placeholder="{:lang('USERNAME_OR_EMAIL')}" title="{:lang('USERNAME_OR_EMAIL')}"
-                               value="{:cookie('admin_username')}" data-rule-required="true" data-msg-required="">
+<body id="ad-background">
+<div class="ad-login">
+    <div class="ad-user-login-main">
+        <div class="ad-user-login-box ad-user-login-header">
+            <h2>ADtalking管理后台登录</h2>
+            <p id="chicken">welcome to our manage</p>
+        </div>
+        <div class="ad-user-main-box">
+            <div class="ad-user-login-box ad-user-login-body">
+                <form action="{:url('public/doLogin')}" method="post" class="js-ajax-form layui-form">
+                    <div class="layui-form-item">
+                        <label class="ad-user-login-icon layui-icon layui-icon-username"></label>
+                        <input type="text" name="username" id="ad-user-login-username" lay-verify="required"
+                               placeholder="用户名"
+                               class="layui-input">
                     </div>
-
-                    <div class="form-group">
-                        <input type="password" id="input_password" class="form-control" name="password"
-                               placeholder="{:lang('PASSWORD')}" title="{:lang('PASSWORD')}" data-rule-required="true"
-                               data-msg-required="">
+                    <div class="layui-form-item">
+                        <label class="ad-user-login-icon layui-icon layui-icon-password"></label>
+                        <input type="password" name="password" id="ad-user-login-password" lay-verify="required"
+                               placeholder="密码"
+                               class="layui-input">
                     </div>
-
-                    <div class="form-group">
-                        <div style="position: relative;">
-                            <input type="text" name="captcha" placeholder="验证码" class="form-control captcha">
-                            <captcha height="32" width="150" font-size="18"
-                                     style="cursor: pointer;position:absolute;right:1px;top:1px;"/>
+                    <div class="layui-form-item">
+                        <div class="layui-row">
+                            <div class="layui-col-xs7">
+                                <label class="ad-user-login-icon layui-icon layui-icon-vercode"
+                                       for="ad-user-login-vercode"></label>
+                                <input type="text" name="captcha" id="ad-user-login-vercode" lay-verify="required"
+                                       placeholder="图形验证码" class="layui-input">
+                            </div>
+                            <div class="layui-col-xs5">
+                                <div style="margin-left: 10px;">
+                                    <captcha height="32" font-size="18"
+                                             style="cursor: pointer;position:absolute;right:1px;top:1px;"/>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <input type="hidden" name="redirect" value="">
-                        <button class="btn btn-primary btn-block js-ajax-submit" type="submit" style="margin-left: 0px"
-                                data-loadingmsg="{:lang('LOADING')}">
+                    <div class="layui-form-item" style="margin-bottom: 20px;">
+                        <input type="checkbox" name="remember" lay-skin="primary" title="记住密码">
+                        <div class="layui-unselect layui-form-checkbox" lay-skin="primary"><span>记住密码</span><i
+                                class="layui-icon layui-icon-ok"></i></div>
+                        <a href="javascript:;" class="ad-user-jump-change ad-link"
+                           style="margin-top: 7px;">忘记密码？</a>
+                    </div>
+                    <div class="layui-form-item">
+                        <button type="submit" class="js-ajax-submit layui-btn layui-btn-normal layui-btn-fluid">
                             {:lang('LOGIN')}
                         </button>
                     </div>
-
                 </form>
             </div>
         </div>
-
     </div>
 </div>
 <script type="text/javascript">
@@ -78,11 +156,36 @@
 </script>
 <script src="__TMPL__/public/assets/js/jquery-1.10.2.min.js"></script>
 <script src="__STATIC__/js/wind.js"></script>
-<script src="__STATIC__/js/admin.js"></script>
+<script src="__STATIC__/okadmin/lib/layui/layui.js"></script>
+<script src="__TMPL__/public/all.js"></script>
 <script>
-    (function () {
-        document.getElementById('input_username').focus();
-    })();
+    var chickenData = [
+        'May it be your joriney on .<br>' +
+        'To light the day .',
+        '到不了的地方都叫做远方，<br>' +
+        '我一直向往的却是比远方更远的地方。',
+        '人生路还漫长，这一路你会经历艰辛，<br>' +
+        '所以不管你做什么，请留住你脸上的傻笑和热情。',
+        '说出来被人嘲笑的梦想，<br>' +
+        '才有实现的价值。',
+        '当一个人用工作去迎接光明，<br>' +
+        '光明很快就会来照耀着他。',
+        '是那些不再重来的，<br>' +
+        '使得生活如此甜蜜。',
+        '也许我没有天分，<br>' +
+        '但我有梦的天真。',
+        '种一棵树最好的时间是十年前，<br>' +
+        '其次是现在。',
+        '生命可以随心所欲，<br>' +
+        '但不能随波逐流。',
+        '萌萌的你别瞅了，<br>' +
+        '赶紧登录上班班。',
+        'How wonderful life is ,<br>' +
+        'while you\'re in the world .'
+    ];
+
+    var timer = '';
+    $('#chicken').html(chickenData[parseInt(Math.random() * 5)]);
 </script>
 </body>
 </html>
