--- a/public/themes/feed_admin/portal/admin_category/add.html
+++ b/public/themes/feed_admin/portal/admin_category/add.html
@@ -119,8 +119,8 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="__STATIC__/js/admin.js"></script>
 <script src="__STATIC__/okadmin/lib/layui/layui.all.js"></script>
+<script src="__TMPL__/public/all.js"></script>
 <script>
     layui.use(['form', 'laydate'], function () {
         var form = layui.form,
