修改分类列表复选框

--- a/public/themes/feed_admin/portal/admin_tag/add.html
+++ b/public/themes/feed_admin/portal/admin_tag/add.html
@@ -47,8 +47,8 @@
 
 
 </div>
-<script src="__STATIC__/js/admin.js"></script>
 <script src="__STATIC__/okadmin/lib/layui/layui.all.js"></script>
+<script src="__TMPL__/public/all.js"></script>
 <script>
 	layui.use(['form', 'laydate'], function () {
 		var form = layui.form,
