--- a/public/themes/feed_admin/portal/admin_tag/index.html
+++ b/public/themes/feed_admin/portal/admin_tag/index.html
@@ -70,6 +70,6 @@
         </div>
     </div>
 </div>
-<script src="__STATIC__/js/admin.js"></script>
+<script src="__TMPL__/public/all.js"></script>
 </body>
 </html>
